update company listing - debugging

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function listCompanies()
 		            website = val2['website'];
 		            tags = val2['tags'];
 		            
-		            if(tags.indexOf(tag) > -1))
+		            if(tags.indexOf(tag) > -1)
 		            	{
 			            		
 			            var template = $('#companyListingTemplate').html();
