update company listing - debugging

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@ title: The API Stack
         <td><h3>{{name}}</h3></td>
     </tr>  
     <tr>                                                                      
-        <td id="{{slug}}">
-        	
-        </td>
+        <td id="{{slug}}">NOTHING</td>
     </tr>  
 </script>
 {% endraw %}
