update company listing - debugging

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ title: The API Stack
 
 <script id="tagListingTemplate" type="text/template">       
     <tr>
-        <td><h3>{{name}}</h3></td>
+        <td style="color:#CCCCCC;"><h2>{{name}}</h2></td>
     </tr>  
     <tr>                                                                      
-        <td id="{{slug}}"></td>
+        <td id="{{slug}}" style="padding: 10px;"></td>
     </tr>  
 </script>
 {% endraw %}
