--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title: The API Stack
 
 <script id="tagListingTemplate" type="text/template">       
     <tr>
-        <td style="color:#CCCCCC;"><h2>{{name}}</h2></td>
+        <td style="background-color:#CCCCCC;"><h2>{{name}}</h2></td>
     </tr>  
     <tr>                                                                      
         <td id="{{slug}}" style="padding: 10px;"></td>
