--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: The API Stack
        </td>
     </tr> 
     <tr>
-        <td colspan="3"><hr /></td>
+        <td><hr /></td>
     </tr>                                                                                                   
 </script>
 
@@ -55,8 +55,14 @@ title: The API Stack
         <td style="background-color:#CCCCCC;"><h2>{{name}}</h2></td>
     </tr>  
     <tr>                                                                      
-        <td id="{{slug}}" style="padding: 10px;"></td>
-    </tr>  
+        <td>
+        	<table cellpadding="4" cellspacing="5" width="100%" id="{{slug}}">
+			    <tr>
+			        <td><hr /></td>
+			    </tr>         		
+        	</table>
+        </td>
+    </tr>      
 </script>
 {% endraw %}
 
