--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title: The API Stack
 
 <script id="tagListingTemplate" type="text/template">       
     <tr>
-        <td style="background-color:#CCCCCC;"><h2>{{name}}</h2></td>
+        <td style="background-color:#E6E6E6;"><h2>{{name}}</h2></td>
     </tr>  
     <tr>                                                                      
         <td>
@@ -67,8 +67,7 @@ title: The API Stack
 {% endraw %}
 
 <div>
-     <p align="center"><hr /></p>
-     <table id="companyListing" style="padding-left: 35px;" width="90%" cellpadding="1" cellspacing="1"></table>
+     <table id="companyListing" width="100%" cellpadding="1" cellspacing="1"></table>
 </div>  
 
 <script type="text/javascript">
