--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@ title: The API Stack
 </script>
 {% endraw %}
 
+<script type="text/javascript">
+ function changeTag(d)
+ 	{
+	v = d.value;
+	location.href = 'index.html?tag=' + v;		
+ 	}
+</script>
+
 <div>
      <table id="companyListing" width="100%" cellpadding="1" cellspacing="1">
 	    <tr>
@@ -74,7 +82,7 @@ title: The API Stack
 	    <tr>
 	        <td align="center" id="tag-dropdown" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;">
 	        	<select id="tag-select">
-	        		<option value="">Select Category</option>
+	        		<option value="" onchange="changeTag(this);">Select Category</option>
 	        	</select>	
 	        </td>
 	    </tr>	        	
