--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ title: The API Stack
 	    </tr>  
 	    <tr>
 	        <td align="center" id="tag-dropdown" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;">
-	        	<select id="tag-select">
-	        		<option value="" onchange="changeTag(this);">Select Category</option>
+	        	<select id="tag-select" onchange="changeTag(this);">
+	        		<option value="">Select Category</option>
 	        	</select>	
 	        </td>
 	    </tr>	        	
