adding tag cloud

--- a/index.html
+++ b/index.html
@@ -11,16 +11,9 @@ title: The API Stack - Home
 
 <h1 class="title">The API Stack</h1>
 
- <table id="companyListing" width="100%" cellpadding="1" cellspacing="1">
-    <tr>
-        <td align="center" id="summary-count" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;"></td>
-    </tr>  
-    <tr>
-        <td align="center" id="tag-dropdown" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;">
-        	<div id="stack-cloud" class="wordcloud"></div>	
-        </td>
-    </tr>	        	
- </table>
+<div align="center" id="summary-count" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;"></div>
+<br />
+<div id="stack-cloud" class="wordcloud"></div>	
 
 <script type="text/javascript">
 			
