--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@ title: The API Stack - Home
 		            tag = val['tag'];             
 		            name = val['name'];
 		            slug = val['slug'];
+		            companycount = val['company-count'];
 		            
-		            html = '<span data-weight="9">' + name + '</span>';
+		            html = '<span data-weight="' + companycount + '">' + name + '</span>';
 		            $('#stack-cloud').append(html);             
 		                            
 		            });
