--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: The API Stack - Home
 		            slug = val['slug'];
 		            companycount = val['company-count'];
 		            
-		            html = '<span data-weight="' + companycount + '">' + name + '</span>';
+		            html = '<a href="index.html"><span data-weight="' + companycount + '">' + name + '</span></a>';
 		            $('#stack-cloud').append(html);             
 		                            
 		            });
