--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ title: The API Stack - Home
 						},
 						"options" : {
 							"color" : "random-dark",
-							"rotationRatio" : 0
+							"rotationRatio" : 0,
+            				"printMultiplier" : 3
 						},
 						"font" : "'Times New Roman', Times, serif",
 						"shape" : "circle"
