--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: The API Stack - Home
 		            slug = val['slug'];
 		            companycount = val['company-count'];
 		            
-		            html = '<a href="index.html"><span data-weight="' + companycount + '">' + name + '</span></a>';
+		            html = '<span data-weight="' + companycount + '">' + name + '</span>';
 		            $('#stack-cloud').append(html);             
 		                            
 		            });
@@ -42,12 +42,11 @@ title: The API Stack - Home
 					$("#stack-cloud").awesomeCloud({
 						"size" : {
 							"grid" : 15,
-							"factor" : 5
+							"factor" : 10
 						},
 						"options" : {
 							"color" : "random-dark",
-							"rotationRatio" : 0,
-            				"printMultiplier" : 3
+							"rotationRatio" : 0
 						},
 						"font" : "'Times New Roman', Times, serif",
 						"shape" : "circle"
