update link to page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: The API Stack - Home
 		            slug = val['slug'];
 		            companycount = val['company-count'];
 		            
-		            html = '<span data-weight="' + companycount + '"><a href="stack.html?tag=' + name + '">' + name + '</a></span>';
+		            html = '<span data-weight="' + companycount + '"><a href="stack.html?tag=' + slug + '">' + name + '</a></span>';
 		            $('#stack-cloud').append(html);             
 		                            
 		            });
