--- a/stack.html
+++ b/stack.html
@@ -70,7 +70,7 @@ title: The API Stack
  function changeTag(d)
  	{
 	v = d.value;
-	location.href = 'index.html?tag=' + v;		
+	location.href = 'stack.html?tag=' + v;		
  	}
 </script>
 
