--- a/stack.html
+++ b/stack.html
@@ -46,7 +46,10 @@ title: The API Stack
        </td>
     </tr> 
     <tr>
-        <td id="apis-{{id}}"></td>
+        <td align="center">
+        	<table width="90%" align="center" cellpadding="3" id="apis-{{id}}">
+        	</table>
+        </td>
     </tr>     
     <tr>
         <td><hr /></td>
