--- a/stack.html
+++ b/stack.html
@@ -47,7 +47,7 @@ title: The API Stack
     </tr> 
     <tr>
         <td align="center">
-        	<table width="80%" align="center" cellpadding="3" id="apis-{{id}}">
+        	<table width="80%" align="center" cellpadding="3" id="apis-{{id}}" style="padding-left: 25px;">
         	</table>
         </td>
     </tr>     
