--- a/stack.html
+++ b/stack.html
@@ -46,7 +46,8 @@ title: The API Stack
        </td>
     </tr> 
     <tr>
-        <td align="center">
+        <td>
+        	<h3>APIs</h3>
         	<table width="80%" align="center" cellpadding="3" id="apis-{{id}}" style="padding-left: 50px;">
         	</table>
         </td>
