--- a/stack.html
+++ b/stack.html
@@ -46,8 +46,8 @@ title: The API Stack
        </td>
     </tr> 
     <tr>
-        <td>
-        	<h3>APIs</h3>
+        <td align="center">
+        	<p align="center" style="font-size: 16px; font-weight: bold; text-decoration: underline;">APIs</p>
         	<table width="80%" align="center" cellpadding="3" id="apis-{{id}}" style="padding-left: 50px;">
         	</table>
         </td>
