remove api block if no apis

--- a/stack.html
+++ b/stack.html
@@ -204,6 +204,10 @@ function listCompanies()
 								$('#apis-' + id).append(apirow);   
 								 	
 			            		});		
+		            		}
+		            	else
+		            		{
+		            		document.getElementById("apis-cell-"+id).style.display = 'none';
 		            		}	
 		            		
 			         });
