--- a/stack.html
+++ b/stack.html
@@ -118,9 +118,9 @@ function listCompanies()
     	}	
     	
 	$.getJSON('data/companies.json', function(companies) { 
-
+		alert('1');
 	    $.getJSON('data/tags.json', function(data) {
-	    	
+	    	alert('2');
 	    	 tagcount = data['tags'].length;
 	    	 companycount = companies['company'].length;
 	    	 document.getElementById("summary-count").innerHTML = companycount + ' companies in ' + tagcount + ' categories';
