--- a/stack.html
+++ b/stack.html
@@ -117,14 +117,14 @@ function listCompanies()
     	defaultTag = '3d-stack';
     	}	
     
-    alert("companies!");
+   // alert("companies!");
     	
 	$.getJSON('data/companies.json', function(companies) { 
 		
-		alert('1');
+		//alert('1');
 		
 	    $.getJSON('data/tags.json', function(data) {
-	    	alert('2');
+	    	//alert('2');
 	    	 tagcount = data['tags'].length;
 	    	 companycount = companies['company'].length;
 	    	 document.getElementById("summary-count").innerHTML = companycount + ' companies in ' + tagcount + ' categories';
