--- a/stack.html
+++ b/stack.html
@@ -50,7 +50,7 @@ title: The API Stack
     </tr> 
     <tr>
         <td align="center" id="apis-cell-{{id}}">
-        	<p align="center" style="font-size: 16px; font-weight: bold; text-decoration: underline;">APIs</p>
+        	<!--<p align="center" style="font-size: 16px; font-weight: bold; text-decoration: underline;">APIs</p>-->
         	<table width="80%" align="center" cellpadding="3" id="apis-{{id}}" style="padding-left: 50px;">
         	</table>
         </td>
@@ -201,7 +201,7 @@ function listCompanies()
 									if(websiteurl!='') { apirow = apirow + '<td><a href="' + websiteurl + '" target="_blank" title="Website"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="25" /></a></td>'; }
 	
 									if(documentationurl!='') { apirow = apirow + '<td><a href="' + documentationurl + '" target="_blank" title="Documentation"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-list.png" width="25" /></a></td>'; }
-	
+									alert(swaggerurl);
 									if(swaggerurl!='') { apirow = apirow + '<td><a href="' + swaggerurl + '" target="_blank" title="Swagger"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-swagger-round.png" width="25" /></a></td>'; }
 																	
 									apirow = apirow + '<tr>';
