--- a/stack.html
+++ b/stack.html
@@ -24,7 +24,7 @@ title: The API Stack
     <li>{"<a href="https://raw.github.com/kinlane/api-stack/gh-pages/data/companies.json" title="JSON" target="_blank">JSON</a>"}</li>
     <li>{"<a href="https://apievangelist.3scale.net/docs" title="API" target="_blank">API</a>"}</li>
 </ul>
-
+<p>These are the companies that I keep a close eye on, and the APIs they are designing, deploying, and managing. When a company and its APIs show up in my research, I deeply profile their operations, something that includes creating Swagger 2.0 definitions for any relevant endpoints. After I profile a couple of companies, I usually publish any updated information here to API Stack, so come back often, an monitor the central JSON files in the /data folder for the latest updates.</p>
 {% raw  %}
 <script id="companyListingTemplate" type="text/template">       
     <tr>
