--- a/stack.html
+++ b/stack.html
@@ -28,13 +28,13 @@ title: The API Stack
 {% raw  %}
 <script id="companyListingTemplate" type="text/template">       
     <tr>
-        <td align="left" valign="top">
+        <td align="left" valign="top" colspan="2">
             <a href="" id="home-logo-link-{{id}}"><img src="{{logo}}" width="{{logo_width}}" align="left" style="padding: 15px;" /></a>
             <a href="" id="home-name-link-{{id}}" style="color: #000;"><strong>{{name}}</strong></a><br />{{summary}}
         </td>
     </tr>
     <tr>
-        <td align="center" valign="middle">            
+        <td align="center" valign="middle" colspan="2">            
 
 	        <a href="index.html" target="_blank" title="Website" id="home-icon-{{id}}"><img id="home-icon-img-{{id}}" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="35" style="display: inline; margin: 10px; width: 35px;" /></a>
 	
@@ -49,23 +49,23 @@ title: The API Stack
        </td>
     </tr> 
     <tr>
-        <td align="center" id="apis-cell-{{id}}">
+        <td align="center" id="apis-cell-{{id}}" colspan="2">
         	<!--<p align="center" style="font-size: 16px; font-weight: bold; text-decoration: underline;">APIs</p>-->
         	<table width="80%" align="center" cellpadding="3" id="apis-{{id}}" style="padding-left: 50px;">
         	</table>
         </td>
     </tr>     
     <tr>
-        <td><hr /></td>
+        <td colspan="2"><hr /></td>
     </tr>                                                                                                   
 </script>
 
 <script id="tagListingTemplate" type="text/template">       
     <tr>
-        <td style="background-color:#E6E6E6;"><h2>{{name}}</h2></td>
+        <td style="background-color:#E6E6E6;" colspan="2"><h2>{{name}}</h2></td>
     </tr>  
     <tr>                                                                      
-        <td>
+        <td colspan="2">
         	<table cellpadding="4" cellspacing="5" width="100%" id="{{slug}}">
 			    <tr>
 			        <td><hr /></td>
