--- a/stack.html
+++ b/stack.html
@@ -88,8 +88,8 @@ title: The API Stack
 <div>
      <table id="companyListing" width="100%" cellpadding="1" cellspacing="1">
 	    <tr>
-	        <td align="center" id="summary-count" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;"></td>
-	        <td align="center" id="tag-dropdown" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;">
+	        <td align="right" id="summary-count" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;"></td>
+	        <td align="left" id="tag-dropdown" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;">
 	        	<select id="tag-select" onchange="changeTag(this);">
 	        		<option value="">Select Category</option>
 	        	</select>	
