update selector text

--- a/stack.html
+++ b/stack.html
@@ -88,7 +88,7 @@ title: The API Stack
 <div>
      <table id="companyListing" width="100%" cellpadding="1" cellspacing="1">
 	    <tr>
-	        <td align="right" id="summary-count" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;"></td>
+	        <td width="30%" align="right" id="summary-count" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;"></td>
 	        <td align="left" id="tag-dropdown" style="font-size: 14px; font-weight: bold; padding-top: 10px; padding-bottom: 10px;">
 	        	<select id="tag-select" onchange="changeTag(this);">
 	        		<option value="">Select Category</option>
@@ -128,7 +128,7 @@ function listCompanies()
 	    	//alert('2');
 	    	 tagcount = data['tags'].length;
 	    	 companycount = companies['company'].length;
-	    	 document.getElementById("summary-count").innerHTML = companycount + ' companies in ' + tagcount + ' categories';
+	    	 document.getElementById("summary-count").innerHTML = companycount + ' companies in ' + tagcount + ' categories: ';
 	    	 	
   			var select = document.getElementById("tag-select");    	 	
 	    	selectCount = 1;
